force-app/main/default/objects/HDT_AfterthoughtDays__mdt/HDT_AfterthoughtDays__mdt.object-meta.xml
<CustomObject>
    <description>Mdt che contiene la matrice per il calcolo dei giorni di ripensamento</description>
    <label>Gironi Di Ripensamento</label>
    <pluralLabel>HDT_AfterthoughtDays</pluralLabel>
</CustomObject>