force-app/main/default/objects/HDT_AfterthoughtDays__mdt/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Account Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>