force-app/main/default/objects/HDT_AfterthoughtDays__mdt/fields/AfterthoughtDays__c.field-meta.xml
<CustomField>
    <fullName>AfterthoughtDays__c</fullName>
    <label>Afterthought Days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>