force-app/main/default/objects/HDT_AfterthoughtDays__mdt/fields/DocumentSendingMode__c.field-meta.xml
<CustomField>
    <fullName>DocumentSendingMode__c</fullName>
    <label>Document Sending Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>