force-app/main/default/objects/HDT_AfterthoughtDays__mdt/fields/SignatureMode__c.field-meta.xml
<CustomField>
    <fullName>SignatureMode__c</fullName>
    <label>Signature Mode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>